--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   splashscreen: ^1.3.5
   adobe_xd: ^2.0.0+1
   flutter_signin_button: ^2.0.0
+  circular_profile_avatar: ^1.0.8
 
 dev_dependencies:
   flutter_test:
@@ -49,7 +50,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   # assets:
   assets:
-    - assets/
+    - asset/
 
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
