--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   adobe_xd: ^2.0.0+1
   flutter_signin_button: ^2.0.0
   circular_profile_avatar: ^1.0.8
+  fluttertoast: ^8.0.7
 
 dev_dependencies:
   flutter_test:
