--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
   flutter_signin_button: ^2.0.0
   circular_profile_avatar: ^1.0.8
   fluttertoast: ^8.0.7
+  step_progress_indicator: ^1.0.1
+  flutter_datetime_picker: ^1.5.1
+  flutter_cupertino_date_picker: ^1.0.26+2
 
 dev_dependencies:
   flutter_test:
@@ -50,6 +53,11 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   # assets:
+  fonts:
+    - family: Arial_Rounded_MT_Bold
+      fonts:
+        - asset: asset/fonts/arlrdbd.ttf
+          weight: 500
   assets:
     - asset/
 
