--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   step_progress_indicator: ^1.0.1
   flutter_datetime_picker: ^1.5.1
   flutter_cupertino_date_picker: ^1.0.26+2
+  http: ^0.13.3
+  shared_preferences: ^2.0.7
 
 dev_dependencies:
   flutter_test:
